--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -28,7 +28,7 @@
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/lower"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="@+id/upperEdTx"
         app:layout_constraintTop_toBottomOf="@+id/upperEdTx"
         tools:ignore="MissingConstraints" />
@@ -41,7 +41,7 @@
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/upper"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/lowerEdTx"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -59,7 +59,7 @@
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/pulse"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lowerEdTx"
@@ -75,7 +75,7 @@
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/Dater"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pulseEdTx"
