--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="110dp"
         android:ems="10"
         android:hint="@string/Weight"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
         android:layout_marginTop="40dp"
         android:ems="10"
         android:hint="@string/Trek"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:textColor="#000000"
         android:textColorHint="#878181"
         app:layout_constraintEnd_toEndOf="parent"
